# controllers/sga_tercero.go
@@ -1,6 +1,7 @@
 package controllers
 
 import (
+	"encoding/json"
 	"net/url"
 	"unicode"
 
@@ -42,6 +43,8 @@ func (c *SgaTercerosController) URLMapping() {
 	c.Mapping("ConsultarInfoAcademicaAspirante", c.ConsultarInfoAcademicaAspirante)
 	c.Mapping("CrearLocalidades", c.CrearLocalidades)
 	c.Mapping("ActualizarInfoAcademicaAspirante", c.ActualizarInfoAcademicaAspirante)
+	c.Mapping("AsignarCorreoInstitucional", c.AsignarCorreoInstitucional)
+
 }
 
 // ActualizarPersona ...
@@ -679,5 +682,28 @@ func (c *SgaTercerosController) ActualizarInfoAcademicaAspirante() {
 		c.Ctx.Output.SetStatus(404)
 		c.Data["json"] = requestresponse.APIResponseDTO(true, 404, nil, err.Error())
 	}
+	c.ServeJSON()
+}
+
+// AsignarCorreoInstitucional ...
+// @Title AsignarCorreoInstitucional
+// @Description Asignar Correo Institucional
+// @Param	body		body 	{}	true		"body for Correo Institucional content Lista de ID Terceros y Correo"
+// @Success 201 {int}
+// @Failure 400 the request contains incorrect syntax
+// @router /asignar-correo-institucional [post]
+func (c *SgaTercerosController) AsignarCorreoInstitucional() {
+	defer errorhandler.HandlePanic(&c.Controller)
+	var body map[string]interface{}
+
+	data := c.Ctx.Input.RequestBody
+	if err := json.Unmarshal(data, &body); err == nil {
+		c.Ctx.Output.SetStatus(201)
+		c.Data["json"] = requestresponse.APIResponseDTO(true, 201, body)
+	} else {
+		c.Ctx.Output.SetStatus(400)
+		c.Data["json"] = requestresponse.APIResponseDTO(false, 400, nil, "Body con Sintaxis Incorrecto")
+	}
+
 	c.ServeJSON()
 }
